--- a/bower.json
+++ b/bower.json
@@ -1,3 +1,17 @@
 {
-	
+  "name": "angular-facebook",
+  "version": "0.0.1",
+  "main": "angular-facebook.js",
+  "ignore": [
+    "**/.*",
+    "*.yml",
+    "*.xml",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ],
+  "dependencies": {
+    "angular": "~1.2.0"
+  }
 }
