--- a/package.json
+++ b/package.json
@@ -1,3 +1,32 @@
 {
-	
+  "name": "angular-facebook",
+  "version": "0.0.1",
+  "main": "angular-facebook.js",
+  "description": "A Raven.js / Sentry wrapper for Angular.js ",
+  "homepage": "https://github.com/gdi2290/angular-facebook",
+  "bugs": "https://github.com/gdi2290/angular-facebook/issues",
+  "author": {
+    "name": "Patrick Stapleton",
+    "email": "patrick@gdi2290.com",
+    "url": "www.gdi2290.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:gdi2290/angular-facebook.git"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ],
+  "dependencies": {
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "load-grunt-tasks": "~0.1.0",
+    "time-grunt": "~0.1.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.0"
+  }
 }
