--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-facebook",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "angular-facebook.js",
   "ignore": [
     "**/.*",
@@ -12,6 +12,6 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.0"
+    "angular": "*"
   }
 }
