--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angular-facebook",
   "version": "0.0.2",
   "main": "angular-facebook.js",
-  "description": "Facebook SDK for Angular.js ",
+  "description": "A Facebook SDK wrapper for Angular.js",
   "homepage": "https://github.com/gdi2290/angular-facebook",
   "bugs": "https://github.com/gdi2290/angular-facebook/issues",
   "author": {
